UIMA-1560 Replaced inefficient constructor use new Long(value), new String(value) with Long.valueOf(value) and String.valueOf(value)
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@812560 13f79535-47bb-0310-9956-ffa450edef68